last Commit for day

--- a/src/main/resources/templates/motors/list-motors.html
+++ b/src/main/resources/templates/motors/list-motors.html
@@ -18,7 +18,10 @@
 
 	<h3>Motors Directory</h3>
 	<hr>
-
+	<a th:href="@{/motors/showAddForm}"
+	class="btn btn-info btn-sm">
+		Add Motor
+	</a>
 	<table class="table table-bordered table-striped">
 		<thead class="table-dark">
 			<tr>
