--- a/src/main/resources/templates/motors/list-motors.html
+++ b/src/main/resources/templates/motors/list-motors.html
@@ -29,6 +29,7 @@
 				<th>Last Name</th>
 				<th>Depth</th>
 				<th>Type</th>
+				<th>Action</th>
 			</tr>
 		</thead>
 		
@@ -39,6 +40,18 @@
 				<td th:text="${tempMotor.lastName}">
 				<td th:text="${tempMotor.Depth}">
 				<td th:text="${tempMotor.Type}">
+				<td>
+				<a th:href="@{/motors/showFormForUpdate(motorId=${tempMotor.id})}"
+				class="btn btn-info btn-sm">
+					Update
+				</a>
+				<a th:href="@{/motors/delete(motorId=${tempMotor.id})}"
+				   class="btn btn-danger btn-sm"
+				   onclick="if (!(confirm('Are you sure you want to delete this motor?'))) return false">
+					Delete
+				</a>
+
+			</td>
 				
 			</tr>
 		</tbody>		
